# glowing-engine

./: .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt  settings.py
src/: db.sqlite3  manage.py
src/GOOGLEAUTH/: apps.py  views.py
src/GOOGLEAUTH/templates/: register.html
src/PROFILES/: apps.py  urls.py  views.py
src/PROFILES/templates/: listingpage.html  marvel.html  profile.html
src/SUBSCRIPTIONS/: admin.py  apps.py  models.py
src/SUBSCRIPTIONS/management/: __init__.py
src/SUBSCRIPTIONS/management/commands/: sync_subs.py
src/SUBSCRIPTIONS/migrations/: 0001_initial.py  0002_alter_subsricption_options.py  0002_subscription_groups.py  0003_subscription_permissions.py  0003_subsricption_groups.py  0004_alter_subscription_permissions.py  0005_subscription_isactive.py
src/Visits/: admin.py  models.py  urls.py  views.py
src/Visits/migrations/: 0001_initial.py
src/Visits/templates/: about.html  base.html  home.html
src/Visits/templates/accounts/: base.html  login.html
src/Visits/templates/base/: css.html  js.html
src/Visits/templates/nav/: navbar.html
src/cfehome/: settings.py  urls.py  views.py
src/commando/management/commands/: hello_world.py  vendor_pull.py
src/helpers/: downloader.py
src/templates/accounts/: base.html
